css/styles.css
body {
  margin: 0 auto;
  max-width: 1400px;
  background-color: #444444;
  font-family: "Roboto", sans-serif;
}
main {
  padding: 5px 50px;
  margin: 15px;
}

/* Navigation bar */
.navbar {
  background-color: #000000;
}

/* Main Content */
div.gallery {
  float: left;
  width: 250px;
  margin: 0 auto;
  margin-bottom: 10px;
  margin-top: 10px;
  background-color: white;
}

div.gallery img {
  width: 100%;
  height: auto;
  margin: 0 auto;
}

div.desc {
  padding: 5px;
  margin: 0 auto;
  background-color: white;
  color: #b0a9d8;
}

h2 {
  color: #030303;
}

div#highlight {
  width: 100%;
  padding: 15px;
  background-color: #444444;
  margin: 0 auto;
  flex: 100%;
  max-width: 100%;
  flex-shrink: 3;
  margin-top: 25px;
}

.row {
  display: flex;
  flex-wrap: wrap;
  padding: 0 15px;
}

button.see-more {
  height: 30px;
  width: 100px;
  border-radius: 12px;
  background-color: #76baf8;
  color: white;
  text-decoration: none;
  border: none;
  margin: 3px;
}

/* Responsive layout*/
@media screen and (max-width: 1200px) {
  .column {
    flex: 43%;
    max-width: 43%;
  }
  div#highlight {
    width: 100%;
    flex: 100%;
  }
}

@media screen and (max-width: 480px) {
  .column {
    flex: 85%;
    max-width: 85%;
  }
  #highlight {
    flex-grow: 1;
  }
}

